--- a/src/main/webapp/inscricao.xhtml
+++ b/src/main/webapp/inscricao.xhtml
@@ -3,6 +3,8 @@
 <ui:composition xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:h="http://java.sun.com/jsf/html"
+                xmlns:ice="http://www.icesoft.com/icefaces/component"
+                xmlns:ace="http://www.icefaces.org/icefaces/components"
                 template="./WEB-INF/templates/layout.xhtml">
 
     <ui:define name="styles">
@@ -16,102 +18,102 @@
     </ui:define>
 
     <ui:define name="content">
-        <h:form>
+        <ice:form>
             <div class="titulo-form">FICHA DE INSCRIÇÃO</div>
-            <h:panelGroup style="text-align: left; margin-bottom: 10px;" layout="block">
+            <ice:panelGroup style="text-align: left; margin-bottom: 10px;" layout="block">
 
 
 
-                <h:panelGroup styleClass="form-block" layout="block">
-                    <h:outputLabel for="idioma" value="Idioma"/>
-                    <h:selectOneMenu id="idioma" value="#{inscricaoBean.candidato.idioma.codigo}" style="width:12em">
+                <ice:panelGroup styleClass="form-block" layout="block">
+                    <ice:outputLabel for="idioma" value="Idioma"/>
+                    <ice:selectOneMenu id="idioma" value="#{inscricaoBean.candidato.idioma.codigo}" style="width:12em">
                         <f:selectItems value="#{inscricaoBean.idiomaItemList}"/>
-                    </h:selectOneMenu>
-                </h:panelGroup>
+                    </ice:selectOneMenu>
+                </ice:panelGroup>
 
-                <h:panelGroup styleClass="form-block" layout="block">
+                <ice:panelGroup styleClass="form-block" layout="block">
                     <ast class="requerido">
-                        <h:outputLabel for="cpf" value="CPF"/>
-                        <h:inputText id="cpf" value="#{inscricaoBean.candidato.cpf}" label="CPF" size="15" required="true" >
+                        <ice:outputLabel for="cpf" value="CPF"/>
+                        <ace:maskedEntry id="cpf" value="#{inscricaoBean.candidato.cpf}" label="CPF" size="15" required="true" mask="999.999.999-99">
                             <f:validator validatorId="cpfValidator"/>
-                        </h:inputText>
+                        </ace:maskedEntry>
                     </ast>
                     <ast class="requerido">
-                        <h:outputLabel for="rg" value="RG"/>
+                        <ice:outputLabel for="rg" value="RG"/>
                         <h:inputText id="rg" value="#{inscricaoBean.candidato.rg}" size="25" label="RG" maxlength="20" required="true"/>
                     </ast>
-                </h:panelGroup>
+                </ice:panelGroup>
 
-                <h:panelGroup styleClass="form-block" layout="block">
+                <ice:panelGroup styleClass="form-block" layout="block">
                     <ast class="requerido">
-                        <h:outputLabel for="nome" value="Nome"/>
+                        <ice:outputLabel for="nome" value="Nome"/>
                         <h:inputText id="nome" value="#{inscricaoBean.candidato.nome}" size="50"
                                      label="Nome" maxlength="100" required="true"/>
                     </ast>
-                </h:panelGroup>
+                </ice:panelGroup>
 
-                <h:panelGroup styleClass="form-block" layout="block">
+                <ice:panelGroup styleClass="form-block" layout="block">
                     <ast class="requerido">
-                        <h:outputLabel for="endereco" value="Endereço"/>
+                        <ice:outputLabel for="endereco" value="Endereço"/>
                         <h:inputText id="endereco" value="#{inscricaoBean.candidato.endereco}" size="50"
                                      styleClass="ui-inputfield" label="Endereço" maxlength="80" required="true"/>
                     </ast>
-                </h:panelGroup>
+                </ice:panelGroup>
 
-                <h:panelGroup styleClass="form-block" layout="block">
+                <ice:panelGroup styleClass="form-block" layout="block">
                     <ast class="requerido">    
-                        <h:outputLabel for="cidade" value="Cidade"/>
+                        <ice:outputLabel for="cidade" value="Cidade"/>
                         <h:inputText id="cidade" value="#{inscricaoBean.candidato.cidade}" size="50"
                                      styleClass="ui-inputfield" label="cidade" maxlength="50" required="true"/>
                     </ast>    
                     <ast class="requerido">    
-                        <h:outputLabel for="estado" value="Estado"/>
+                        <ice:outputLabel for="estado" value="Estado"/>
                         <h:inputText id="estado" value="#{inscricaoBean.candidato.estado}" size="4"
                                      styleClass="ui-inputfield" label="Estado" maxlength="2" required="true"/>
                     </ast>
-                </h:panelGroup>
-                <h:panelGroup styleClass="form-block" layout="block">
+                </ice:panelGroup>
+                <ice:panelGroup styleClass="form-block" layout="block">
                     <ast class="requerido">
-                        <h:outputLabel for="cep" value="CEP"/>
-                        <h:inputText id="cep" value="#{inscricaoBean.candidato.cep}" label="CEP" size="10" required="true"/>
+                        <ice:outputLabel for="cep" value="CEP"/>
+                        <ace:maskedEntry id="cep" value="#{inscricaoBean.candidato.cep}" label="CEP" size="10" required="true" mask="99.999-99"/>
                     </ast>
 
-                    <h:outputLabel for="bairro" value="Bairro"/>
+                    <ice:outputLabel for="bairro" value="Bairro"/>
                     <h:inputText id="bairro" value="#{inscricaoBean.candidato.bairro}" size="30" label="Bairro" maxlength="50"/>
-                </h:panelGroup>
-                <h:panelGroup styleClass="form-block" layout="block">
-                    <h:outputLabel for="fone" value="Fone"/>
-                    <h:inputText id="fone" value="#{inscricaoBean.candidato.fone}" label="Fone" size="15"/>
-                    <h:outputLabel for="celular" value="Celular"/>
-                    <h:inputText id="celular" value="#{inscricaoBean.candidato.celular}" label="Celular" size="15"/>
-                </h:panelGroup>
-                <h:panelGroup styleClass="form-block" layout="block">
+                </ice:panelGroup>
+                <ice:panelGroup styleClass="form-block" layout="block">
+                    <ice:outputLabel for="fone" value="Fone"/>
+                    <ace:maskedEntry id="fone" value="#{inscricaoBean.candidato.fone}" label="Fone" size="15" mask="(99) 9999-9999"/>
+                    <ice:outputLabel for="celular" value="Celular"/>
+                    <ace:maskedEntry id="celular" value="#{inscricaoBean.candidato.celular}" label="Celular" size="15" mask="(99) 9999-9999"/>
+                </ice:panelGroup>
+                <ice:panelGroup styleClass="form-block" layout="block">
                     <ast class="requerido">
-                        <h:outputLabel for="email" value="E-mail"/>
+                        <ice:outputLabel for="email" value="E-mail"/>
                         <h:inputText id="email" value="#{inscricaoBean.candidato.email}" size="80"
                                      label="E-mail" maxlength="200" required="true"/>
                     </ast>
-                </h:panelGroup>
-                <h:panelGroup styleClass="form-block" layout="block">
+                </ice:panelGroup>
+                <ice:panelGroup styleClass="form-block" layout="block">
                     <ast class="requerido">
-                        <h:outputLabel for="instituicao" value="Instituição"/>
+                        <ice:outputLabel for="instituicao" value="Instituição"/>
                         <h:inputText id="instituicao" value="#{inscricaoBean.candidato.instituicao}" size="80"
                                      styleClass="ui-inputfield" label="Instituição" maxlength="100" required="true"/>
                     </ast>
-                </h:panelGroup>
-                <h:panelGroup styleClass="form-block" layout="block">
+                </ice:panelGroup>
+                <ice:panelGroup styleClass="form-block" layout="block">
                     <ast class="requerido">
-                        <h:outputLabel for="programa" value="Programa"/>
+                        <ice:outputLabel for="programa" value="Programa"/>
                         <h:inputText id="programa" value="#{inscricaoBean.candidato.programa}" size="80"
                                      styleClass="ui-inputfield" label="Programa" maxlength="100" required="true"/>
                     </ast>
-                </h:panelGroup>
-            </h:panelGroup>
-            <h:commandButton value="Confirmar Inscrição" action="#{inscricaoBean.confirmaAction}">
+                </ice:panelGroup>
+            </ice:panelGroup>
+            <ice:commandButton value="Confirmar Inscrição" action="#{inscricaoBean.confirmaAction}">
 
-            </h:commandButton>
-            <h:messages/>
-        </h:form>
+            </ice:commandButton>
+            <ice:messages/>
+        </ice:form>
     </ui:define>
 
 </ui:composition>
